--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^5.5.3
   bcrypt: ^1.1.3
   shared_preferences: ^2.5.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
